@startuml ERD_Access_Control_System_Improved

' Cấu hình hiển thị
skinparam linetype ortho
skinparam class {
    BackgroundColor WhiteSmoke
    BorderColor Black
    ArrowColor Black
}

' Entity: users
class users {
    + id : INT <<PK>>
    --
    employee_id : VARCHAR(20) <<UNIQUE>>
    email : VARCHAR(255) <<UNIQUE>>
    password : VARCHAR(255)
    full_name : VARCHAR(100)
    phone : VARCHAR(20)
    avatar : TEXT
    department_id : INT <<FK>>
    position : ENUM('staff','manager','director')
    role : ENUM('admin','security','employee')
    is_active : TINYINT(1)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' Entity: departments
class departments {
    + id : INT <<PK>>
    --
    name : VARCHAR(100) <<UNIQUE>>
    parent_id : INT <<FK>>
    description : VARCHAR(255)
    level : INT
    created_at : TIMESTAMP
}

' Entity: cards
class cards {
    + id : INT <<PK>>
    --
    card_uid : VARCHAR(50) <<UNIQUE>>
    user_id : INT <<FK>>
    is_active : TINYINT(1)
    issued_at : TIMESTAMP
    expired_at : TIMESTAMP
    notes : VARCHAR(255)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' Entity: doors
class doors {
    + id : INT <<PK>>
    --
    name : VARCHAR(100)
    location : VARCHAR(255)
    department_id : INT <<FK>>
    is_locked : TINYINT(1)
    is_active : TINYINT(1)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' Entity: access_logs
class access_logs {
    + id : INT <<PK>>
    --
    card_id : INT <<FK>>
    user_id : INT <<FK>>
    door_id : INT <<FK>>
    access_time : TIMESTAMP
    status : ENUM('granted','denied')
    denial_reason : VARCHAR(255)
    created_at : TIMESTAMP
}

' Entity: permissions (IMPROVED - removed JSON)
class permissions {
    + id : INT <<PK>>
    --
    name : VARCHAR(100) <<UNIQUE>>
    description : TEXT
    door_access_mode : ENUM('all','specific','none')
    time_restrictions : JSON
    priority : INT
    is_active : TINYINT(1)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' Entity: permission_doors (NEW - Junction table)
class permission_doors {
    + id : INT <<PK>>
    --
    permission_id : INT <<FK>>
    door_id : INT <<FK>>
    created_at : TIMESTAMP
    --
    <<UNIQUE(permission_id, door_id)>>
}

' Entity: door_departments (junction table)
class door_departments {
    + id : INT <<PK>>
    --
    door_id : INT <<FK>>
    department_id : INT <<FK>>
    created_at : TIMESTAMP
    --
    <<UNIQUE(door_id, department_id)>>
}

' Entity: visitor_photos
class visitor_photos {
    + id : INT <<PK>>
    --
    photo_path : LONGTEXT
    checkout_photo_path : LONGTEXT
    notes : TEXT
    captured_at : TIMESTAMP
    is_checkout : TINYINT(1)
    time_out : TIMESTAMP
    created_at : TIMESTAMP
}

' Relationships

' users - departments (N:1)
users "0..*" -- "0..1" departments : belongs to >
users::department_id -- departments::id

' departments - departments (self-reference)
departments "0..*" -- "0..1" departments : parent >
departments::parent_id -- departments::id

' users - cards (1:N)
users "0..1" -- "0..*" cards : has >
users::id -- cards::user_id

' cards - access_logs (1:N)
cards "0..1" -- "0..*" access_logs : logs >
cards::id -- access_logs::card_id

' users - access_logs (1:N)
users "0..1" -- "0..*" access_logs : accesses >
users::id -- access_logs::user_id

' doors - access_logs (1:N)
doors "1" -- "0..*" access_logs : records >
doors::id -- access_logs::door_id

' departments - doors (1:N)
departments "0..1" -- "0..*" doors : manages >
departments::id -- doors::department_id

' doors - door_departments - departments (N:M)
doors "1" -- "0..*" door_departments
doors::id -- door_departments::door_id

departments "1" -- "0..*" door_departments
departments::id -- door_departments::department_id

' NEW: permissions - permission_doors - doors (N:M)
permissions "1" -- "0..*" permission_doors
permissions::id -- permission_doors::permission_id

doors "1" -- "0..*" permission_doors
doors::id -- permission_doors::door_id

note right of permissions
  ✅ IMPROVED: Đã xóa field JSON
  allowed_door_ids.

  Giờ dùng bảng permission_doors
  để quản lý quan hệ N:M với doors.

  time_restrictions vẫn dùng JSON
  vì không cần JOIN.
end note

note right of permission_doors
  ✅ NEW: Bảng trung gian cho
  quan hệ N:M giữa
  permissions và doors.

  Thay thế JSON field
  để có referential integrity.
end note

note bottom of door_departments
  Bảng trung gian cho
  quan hệ N:M giữa
  doors và departments
end note

note right of visitor_photos
  Bảng lưu ảnh khách thăm
  check-in/check-out.
  Hoạt động độc lập.
end note

@enduml
